Alterando o formato da imagem do usuário

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!--  HTML HyperText - HiperTexto(É um texto com link) Markup - Marcação(Tags) Language - Linguagem(Regras de uma linguagem)  -->
 <!--Senha do desafio 1: #RumoAoPróximoNível-->
 <!-- Senha do desafio 2: #Protagonistas-->
-<!-- Senha do Desafio 3: #ImaginarConstruirTransformar-->
+<!-- Senha do Desafio 3: #ImaginarConstruirTransformar  -->
+<!-- Senha do Desafio 4: #SemLimites -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -28,7 +29,7 @@
           />
         </div>
         <h1 id="userName">Bernardo Filipe</h1>
-        <a id="userLink " href="https://github.com/bernardofofg" target="_blank"
+        <a id="userLink" href="https://github.com/bernardofofg" target="_blank"
           ><img src="./images/git-hub.svg" alt="git-hub" /><span id="userLogin"
             >bernardofofg</span
           ></a
