Deixando a aplicação responsiva

--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
-<!--  HTML HyperText - HiperTexto(É um texto com link) Markup - Marcação(Tags) Language - Linguagem(Regras de uma linguagem)  -->
-<!--Senha do desafio 1: #RumoAoPróximoNível-->
-<!-- Senha do desafio 2: #Protagonistas-->
-<!-- Senha do Desafio 3: #ImaginarConstruirTransformar  -->
-<!-- Senha do Desafio 4: #SemLimites -->
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
     <title>Bernardo Filipe - DoWhile 2021</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
